--- a/css/one.css
+++ b/css/one.css
@@ -110,7 +110,7 @@ body {
   content: "";
   border-width: 10px;
   border-style: solid;
-  border-color: transparent transparent #f6f6f6 transparent;
+  border-color: transparent transparent var(--main-color) transparent;
   position: absolute;
   right: 5px;
   top: -20px;
@@ -129,7 +129,7 @@ body {
 }
 
 .header .container .links ul li:not(:last-child) a {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid var(--main-color);
 }
 
 .header .container .links:hover ul {
