--- a/css/one.css
+++ b/css/one.css
@@ -166,9 +166,43 @@ body {
 .landing .intro-text p {
   font-size: 19px;
   line-height: 1.8;
+  color: rgb(207, 207, 207);
 }
 
 .landing .intro-text p span {
-  color: var(--main-color);
+  color: rgb(207, 207, 207);
 }
 /* End Main/Landing */
+
+/* Start Features */
+.features {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #f6f6f6;
+}
+
+.features .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+}
+
+.features .feat {
+  padding: 20px;
+  text-align: center;
+}
+
+.features .feat i {
+  color: var(--main-color);
+}
+
+.features .feat h3 {
+  font-weight: 800;
+}
+
+.features .feat p {
+  line-height: 1.6;
+  color: #777;
+  font-size: 17px;
+}
+/* End Features */
