--- a/css/one.css
+++ b/css/one.css
@@ -15,11 +15,41 @@ body {
   font-family: 'Work Sans', sans-serif;
 }
 
+/* Start Components */
+.special-heading {
+  color: #ebeced;
+  margin: 0;
+  font-size: 100px;
+  font-weight: 800;
+  letter-spacing: -3px;
+  text-align: center;
+}
+
+.special-heading + p {
+  text-align: center;
+  font-size: 20px;
+  margin: -30px 0 0;
+  color: #797979;
+}
+/* End Components  */
+
 .container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+/* For the Special heading + P after it */
+@media (max-width: 767px) {
+  .special-heading {
+    font-size: 60px;
+  }
+
+  .special-heading + p {
+    margin-top: -20px;
+  }
+
 }
 
 /* Small */
@@ -206,3 +236,12 @@ body {
   font-size: 17px;
 }
 /* End Features */
+
+/* Start Services */
+.services {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+/* End Services */
+
+
