Finished and completed the services section.

--- a/css/one.css
+++ b/css/one.css
@@ -2,6 +2,7 @@
 /* Start Global Variables */
 :root {
   --main-color: #10cab7;
+  --secondary-color: #2c4744;
 }
 /* End Global Variables */
 /* Start Global Rules */
@@ -50,12 +51,21 @@ body {
     margin-top: -20px;
   }
 
+  .services .services-content .srv {
+    flex-direction: column;
+    text-align: center;
+  }
+
 }
 
 /* Small */
 @media (min-width: 768px) {
   .container {
     width: 750px;
+  }
+
+  .services .services-content .srv .text p {
+    text-align: justify;
   }
 }
 
@@ -64,12 +74,20 @@ body {
   .container {
     width: 970px;
   }
+
+  .services .services-content .srv .text p {
+    text-align: justify;
+  }
 }
 
 /* Large */
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
+  }
+
+  .services .services-content .srv .text p {
+    text-align: justify;
   }
 }
 /* End Global Rules */
@@ -242,6 +260,65 @@ body {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+
+.services .services-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 30px;
+  margin-top: 100px;
+}
+
+.services .services-content .srv {
+  display: flex;
+  margin-bottom: 40px;
+}
+
+.services .services-content .srv i {
+  color: var(--main-color);
+  flex-basis: 60px;
+}
+
+.services .services-content .srv .text {
+  flex: 1;
+}
+
+.services .services-content .srv .text h3 {
+  margin: 0 0 20px;
+}
+
+.services .services-content .srv .text p {
+  color: #444;
+  font-weight: 300;
+  line-height: 1.6;
+}
+
+.services .services-content .image {
+  text-align: center;
+  position: relative;
+}
+
+.services .services-content .image::before {
+  content: "";
+  background-color: var(--secondary-color);
+  width: 100px;
+  height: calc(100% + 100px);
+  top: -50px;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+@media (max-width: 1199.20px) {
+  .image-colomn {
+    display: none;
+  }
+}
+
+.services .services-content .image img {
+  width: 260px;
+}
+
+
 /* End Services */
 
 
