--- a/css/one.css
+++ b/css/one.css
@@ -370,7 +370,114 @@ body {
 
 /* End Portfolio */
 
+/* Start About */
 
+.about {
+  padding-top: var(--section-padding);
+  padding-bottom: calc(var(--section-padding) + 60px);
+}
+
+.about .about-content {
+  margin-top: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+@media (max-width: 991px) {
+  .about .about-content {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+.about .about-content .image {
+  position: relative;
+  width: 240px;
+  height: 240px;
+}
+
+@media (max-width: 991px) {
+  .about .about-content .image {
+    margin: 0 auto 60px;
+  }
+}
+
+.about .about-content .image::before {
+  content: "";
+  position: absolute;
+  background-color: #adadad;
+  width: 100px;
+  height: calc(100% + 80px);
+  top: -40px;
+  left: -20px;
+  z-index: -1;
+}
+
+/* @media (max-width: 540px){
+  .about .about-content .image::before {
+    width: 70px;
+    height: calc(100% + 70px);
+    top: -35px;
+  }
+} */
+
+.about .about-content .image::after {
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 149px;
+  border-bottom: 50px solid var(--main-color);
+  border-left: 60px solid var(--main-color);
+  z-index: -1;
+  top: -40px;
+  right: -142px;
+}
+
+/* @media (max-width: 540px){
+  .about .about-content .image::after {
+    width: 114px;
+    height: 140px;
+    border-bottom: 40px solid var(--main-color);
+    border-left: 40px solid var(--main-color);
+    right: -135px;
+  }
+} */
+
+@media (max-width: 991px) {
+  .about .about-content .image::before, 
+  .about .about-content .image::after {
+    display: none;
+  }
+}
+
+
+.about .about-content .image img {
+  max-width: 100%;
+}
+
+.about .about-content .text {
+  flex-basis: calc(100% - 500px);
+}
+
+.about .about-content .text p:first-of-type {
+  font-weight: bold;
+  line-height: 2;
+  margin-bottom: 50px;
+}
+
+.about .about-content .text hr {
+  width: 50%;
+  border-color: var(--main-color);
+  display: inline-block;
+}
+
+.about .about-content .text p:last-of-type {
+  line-height: 2;
+  color: #777;
+}
+
+/* End About */
 
 
 
