--- a/css/one.css
+++ b/css/one.css
@@ -479,5 +479,73 @@ body {
 
 /* End About */
 
+/* Start Contact  */
+.contact {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--section-background);
+}
+
+.contact h2 {
+  color: rgb(216, 216, 216);
+}
+
+.contact .info {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  text-align: center;
+}
+
+.contact .info .label {
+  font-weight: 800;
+  font-size: 35px;
+  color: var(--secondary-color);
+  margin-bottom: 15px;
+  letter-spacing: -2px;
+}
+
+.contact .info .link {
+  font-weight: 800;
+  font-size: 35px;
+  color: var(--main-color);
+  text-decoration: none;
+  display: block;
+}
+
+.social {
+  display: flex;
+  font-size: 16px;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.social i {
+  color: var(--secondary-color);
+  margin-left: 10px;
+}
+
+@media (max-width: 767px) {
+  .contact .info .label,
+  .contact .info .link {
+    font-size: 25px;
+  }
+}
+
+/* End Contact  */
+
+/* Start Footer  */
+.footer {
+  background-color: var(--secondary-color);
+  padding: var(--30px) 10px;
+  color: white;
+  text-align: center;
+  font-size: 18px;
+}
+
+.footer span {
+  color: var(--main-color);
+}
+/* Start Footer  */
+
 
 
